--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,7 +9,10 @@
       {% endif %}
 </head>
 <body>
-        <div>RK3505 APPSEC SpellCheck: <a href="/index">Home</a></div>
+        <div>RK3505 APPSEC SpellCheck:
+            <a href="{{ url_for('index') }}">Home</a>
+            <a href="{{ url_for('login') }}">Login</a>
+        </div>
         <hr>
         {% block content %}{% endblock %}
 
