--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+<!-- use the base.html and extend on it -->
 {% block content %}
     <h1>Hi, {{ user.username }}!</h1>
     {% for post in posts %}
