--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,8 +1,5 @@
 {% extends "base.html" %}
 <!-- use the base.html and extend on it -->
 {% block content %}
-    <h1>Hi, {{ user.username }}!</h1>
-    {% for post in posts %}
-    <div><p>{{ post.author.username }} says: <b>{{ post.body }}</b></p></div>
-    {% endfor %}
+    <h1>Hi, {{ current_user.username }}!</h1>
 {% endblock %}
