--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,6 +17,7 @@
                 expression is going to be True only when the user is not logged in-->
                 <a href="{{ url_for('login') }}">Login</a>
             {% else %}
+                <a href="{{ url_for('spell_check') }}">Spell Check</a>
                 <a href="{{ url_for('logout') }}">Logout</a>
             {% endif %}
         </div>
