--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -29,4 +29,7 @@
         <p>{{ form.submit() }}</p>
     </form>
     <p>New User? <a href="{{ url_for('register') }}">Click to Register!</a></p>
+    <h3>Login Status is: {{ login_message }}!</h3>
+    <h3>Hi, {{ current_user.username }}!</h3>
+    <div id="result">{{ login_message }}</div>
 {% endblock %}
