--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -27,4 +27,5 @@
         </p>
         <p>{{ form.submit() }}</p>
     </form>
+        <div id="success">{{ registration_message }}</div>
 {% endblock %}
