--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -5,21 +5,21 @@
     <form action="" method="post" novalidate> <!-- action attribute tells the browser the URL is used when submitting info the user enters-->
         <!-- method says which http method to use, default is get -->
         {{ form.hidden_tag() }} <!--CSRF protection, includes a token from the SECRET_KEY variable used by flask-wtf -->
-        <p>
+        <p id="uname">
             {{ form.username.label }}<br>
             {{ form.username(size=32) }}
             {% for error in form.username.errors %}
             <span style="color: darkred;">[{{ error }}]</span>
             {% endfor %}
         </p>
-        <p>
+        <p id="pword">
             {{ form.password.label }}<br>
             {{ form.password(size=32) }}
             {% for error in form.password.errors %}
             <span style="color: yellowgreen;">[{{ error }}]</span>
             {% endfor %}
         </p>
-            <p>
+        <p id="2fa">
             {{ form.twofact.label }}<br>
             {{ form.twofact(size=11) }}
             {% for error in form.twofact.errors %}
