--- a/app/templates/spell_check.html
+++ b/app/templates/spell_check.html
@@ -5,7 +5,7 @@
     <form action="" method="post" novalidate> <!-- action attribute tells the browser the URL is used when submitting info the user enters-->
         <!-- method says which http method to use, default is get -->
         {{ form.hidden_tag() }} <!--CSRF protection, includes a token from the SECRET_KEY variable used by flask-wtf -->
-        <p>
+        <p id="inputtext">
             {{ form.spellcheck.label }}<br>
             {{ form.spellcheck(size=32)}}<br>
             {% for error in form.spellcheck.errors %}
