changing tag type from div to p for success tags
Signed-off-by: robertkirkpatrick <rk3505@nyu.edu>

--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -28,5 +28,5 @@
         <p>{{ form.submit() }}</p>
     </form>
         <h3>Registration Status is: {{ registration_message }}!</h3>
-        <div id="success">{{ registration_message }}</div>
+        <p id="success">{{ registration_message }}</p>
 {% endblock %}
