--- a/app/templates/spell_check.html
+++ b/app/templates/spell_check.html
@@ -15,6 +15,6 @@
         <p>{{ form.submit() }}</p>
     </form>
         <h2>Mispelled List</h2>
-        <div id="textout">{{ userwords }}</div>
-	    <div id="misspelled">{{ misspelled }}</div>
+        <p id="textout">{{ userwords }}</p>
+	    <p id="misspelled">{{ misspelled }}</p>
 {% endblock %}
