--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -28,5 +28,5 @@
         <p>{{ form.submit() }}</p>
     </form>
         <h3>Registration Status is: {{ registration_message }}!</h3>
-        <p id="success">{{ registration_message }}</p>
+        <p id="success">{{ success }}</p>
 {% endblock %}
